# internal/model/serializer/user_serializer.go
@@ -3,14 +3,15 @@ package serializer
 import (
 	"go-api-example/internal/entity"
 	"go-api-example/internal/model"
+	"time"
 )
 
 func UserToResponse(u *entity.User) *model.UserResponse {
 	return &model.UserResponse{
 		ID:        u.ID,
 		Username:  u.Username,
-		CreatedAt: u.CreatedAt,
-		UpdatedAt: u.UpdatedAt,
+		CreatedAt: u.CreatedAt.Format(time.RFC3339),
+		UpdatedAt: u.UpdatedAt.Format(time.RFC3339),
 	}
 }
 
@@ -18,12 +19,7 @@ func ListUserToResponse(users []entity.User) []model.UserResponse {
 	res := make([]model.UserResponse, len(users))
 
 	for i, u := range users {
-		res[i] = model.UserResponse{
-			ID:        u.ID,
-			Username:  u.Username,
-			CreatedAt: u.CreatedAt,
-			UpdatedAt: u.UpdatedAt,
-		}
+		res[i] = *UserToResponse(&u)
 	}
 
 	return res
